--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://j.dolenc.github.io/j-dolenc.github.io",
+  "homepage": "http://j-dolenc.github.io",
   "name": "j-dolenc.github.io",
   "version": "0.1.0",
   "private": true,
